--- a/src/app/add-teacher/add-teacher.component.html
+++ b/src/app/add-teacher/add-teacher.component.html
@@ -1,23 +1,40 @@
 <div class="container" style="margin-top: 5%;">
-    <div class="row">
-      <div class="col-lg-7">
-        <form #teacherForm="ngForm" (ngSubmit)="addteacher()">
-          <div class="form-group">
-            <input type="text" [(ngModel)]="teacher.name" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Name">
-          </div>
-          <div class="form-group">
-              <input type="text" [(ngModel)]="teacher.speciality" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="speciality">
-            </div>
-            <div class="form-group">
-              <input type="text" [(ngModel)]="teacher.experience" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="experience">
-            </div>
-          <div class="form-group">
-              <input type="submit" class="btn btn-primary py-3 px-5" value="Add">
-            </div>
-          
-          
-        </form>  
-      </div>
-     
+  <div class="row">
+    <div class="col-lg-7">
+      <h3 class="mb-4">Add New Teacher</h3>
+      <form #teacherForm="ngForm" (ngSubmit)="addTeacher()">
+        <div class="form-group">
+          <label for="firstName">First Name</label>
+          <input type="text" [(ngModel)]="teacher.firstName" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="First Name" required>
+        </div>
+        <div class="form-group">
+          <label for="lastName">Last Name</label>
+          <input type="text" [(ngModel)]="teacher.lastName" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Last Name" required>
+        </div>
+        <div class="form-group">
+          <label for="age">Age</label>
+          <input type="number" [(ngModel)]="teacher.age" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Age" required>
+        </div>
+        <div class="form-group">
+          <label for="address">Address</label>
+          <input type="text" [(ngModel)]="teacher.address" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Address" required>
+        </div>
+        <div class="form-group">
+          <label for="speciality">Speciality</label>
+          <select [(ngModel)]="teacher.speciality" [ngModelOptions]="{standalone:true}" class="form-control" required>
+            <option *ngFor="let speciality of specialities" [value]="speciality">{{ speciality }}</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="experience">Experience</label>
+          <input type="number" [(ngModel)]="teacher.experience" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Experience (years)" required>
+        </div>
+        <div class="form-group">
+          <input type="submit" class="btn btn-primary py-3 px-5" value="Add Teacher">
+        </div>
+      </form>
+      <button class="btn btn-secondary mt-3" (click)="goBack()">Back</button>
+
     </div>
   </div>
+</div>
