--- a/src/app/edit-teacher/edit-teacher.component.html
+++ b/src/app/edit-teacher/edit-teacher.component.html
@@ -1,29 +1,41 @@
-<div class="site-section" style="margin-top: 5%;">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-7">
-                <form #teachersForm="ngForm" (ngSubmit)="editTeacher">
-                    <div class="form-group">
-                        <input type="text" [(ngModel)]="teacher.name" [ngModelOptions]="{standalone:true}"
-                            class="form-control" placeholder="name">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" [(ngModel)]="teacher.speciality" [ngModelOptions]="{standalone:true}"
-                            class="form-control" placeholder="speciality">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" [(ngModel)]="teacher.experience" [ngModelOptions]="{standalone:true}"
-                            class="form-control" placeholder="experience">
-                    </div>
-                    <div class="form-group">
-                        <button type="submit" class="btn btn-primary py-3 px-5" (click)="editTeacher()">editTeacher</button> 
-                    </div>
+<div class="container mt-5">
+    <h3>Edit Teacher</h3>
+    <div class="row">
+      <div class="col-lg-7">
+        <form #teachersForm="ngForm" (ngSubmit)="editTeacher()">
+          <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" [(ngModel)]="teacher.firstName" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="First Name" required>
+          </div>
+          <div class="form-group">
+            <label for="lastName">Last Name</label>
+            <input type="text" [(ngModel)]="teacher.lastName" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Last Name" required>
+          </div>
+          <div class="form-group">
+            <label for="age">Age</label>
+            <input type="number" [(ngModel)]="teacher.age" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Age" required>
+          </div>
+          <div class="form-group">
+            <label for="address">Address</label>
+            <input type="text" [(ngModel)]="teacher.address" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Address" required>
+          </div>
+          <div class="form-group">
+            <label for="speciality">Speciality</label>
+            <select [(ngModel)]="teacher.speciality" [ngModelOptions]="{standalone:true}" class="form-control" required>
+              <option *ngFor="let speciality of specialities" [value]="speciality">{{ speciality }}</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="experience">Experience (years)</label>
+            <input type="number" [(ngModel)]="teacher.experience" [ngModelOptions]="{standalone:true}" class="form-control" placeholder="Experience" required>
+          </div>
+          <div class="form-group">
+            <button type="submit" class="btn btn-primary py-3 px-5">Update Teacher</button>
+          </div>
+        </form>
+        <button class="btn btn-secondary mt-3" (click)="goBack()">Back</button>
 
-
-                </form>
-            </div>
-
-        </div>
+      </div>
     </div>
-</div>
-
+  </div>
+  
