--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,28 +9,38 @@
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <div class="navbar-nav font-weight-bold mx-auto py-0">
-                <li class="nav-item nav-link"><a routerLink="Home">Home</a></li>
-                <li class="nav-item nav-link"> <a href="about.html">About</a></li>
-                <li *ngIf="user?.role==='user'" class="nav-item nav-link"> <a routerLink="classes">Classes</a></li>
-                <li *ngIf="user?.role==='user'" class="nav-item nav-link"><a routerLink="teachers">Teachers</a></li>
-                <li *ngIf="user?.role==='user'" class="nav-item nav-link"><a routerLink="courses">courses</a></li>
-                <div class="nav-item dropdown">
-                    <a   *ngIf="!isLoggedIn()"href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">dashboard</a>
-                    <div class="dropdown-menu rounded-0 m-0" *ngIf="!isLoggedIn()">
-                        <a class="dropdown-item" routerLink="add-course">add course</a>
-                        <a class="dropdown-item" routerLink="add-teacher">add teacher</a>
-                        <a  class="dropdown-item" routerLink="admin">admin</a>
+                <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a routerLink="Home">Home</a></li>
+                <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a href="about.html">About</a></li>
+                <li *ngIf="user?.role === 'user'" class="nav-item nav-link"><a routerLink="classes">Classes</a></li>
+                <li *ngIf="user?.role === 'user'" class="nav-item nav-link"><a routerLink="teachers">Teachers</a></li>
+                <li *ngIf="user?.role === 'user'" class="nav-item nav-link"><a routerLink="courses">Courses</a></li>
+
+                <div *ngIf="isLoggedIn()" class="nav-item dropdown">
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dashboard</a>
+                    <div class="dropdown-menu rounded-0 m-0">
+                        <a class="dropdown-item" routerLink="add-course">Add Course</a>
+                        <a class="dropdown-item" routerLink="add-teacher">Add Teacher</a>
+                        <a class="dropdown-item" routerLink="admin">Admin</a>
                     </div>
                 </div>
-                
-                
-                <li class="nav-item nav-link"> <a routerLink="Universities">Universities</a></li>
-                <li class="nav-item nav-link"> <a routerLink="searchCourse">search course</a></li>
-                <li class="nav-item nav-link"> <a href="contact.html">Contact</a></li>
-                <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a routerLink="SignUp" >Signup</a></li>
+
+                <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a routerLink="Universities">Universities</a></li>
+                <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a routerLink="searchCourse">Search Course</a></li>
+                <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a href="contact.html">Contact</a></li>
+
+                <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a routerLink="SignUp">Signup</a></li>
                 <li *ngIf="!isLoggedIn()" class="nav-item nav-link"><a routerLink="Login">Login</a></li>
-                <li *ngIf="!!isLoggedIn()" class="nav-item nav-link"> <h2>welcome {{user.firstName}}</h2></li>
-                <li *ngIf="!isLoggedIn()" class="nav-item nav-link"> <a routerLink="home" (click)="logout ()"></a>Logout</li>
+
+                <li *ngIf="isLoggedIn()" class="nav-item nav-link">
+                    <h2>Welcome {{ user.firstName }}</h2>
+                </li>
+                <li *ngIf="isLoggedIn()" class="nav-item nav-link">
+                    <a routerLink="profile">Profile</a>
+                  </li>
+                  
+                <li *ngIf="isLoggedIn()" class="nav-item nav-link">
+                    <a (click)="logout()">Logout</a>
+                </li>
             </div>
             <a *ngIf="!user" href="" class="btn btn-primary px-4">Join Class</a>
         </div>
