--- a/src/app/teacher-info/teacher-info.component.html
+++ b/src/app/teacher-info/teacher-info.component.html
@@ -1,17 +1,17 @@
-<div class="position-relative overflow-hidden mb-4" style="margin-left: 40%;margin-top: 7%;">
-<div  style="border-radius: 100%;width: 30%; height: 30%; "class="d-flex justify-content-center align-items-center">
-    <img class="img-fluid w-100" src={{teacher?.img}} alt="" >
-    <div
-        class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
-        <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px;"
-            href="#"><i class="fab fa-twitter"></i></a>
-        <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px;"
-            href="#"><i class="fab fa-facebook-f"></i></a>
-        <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px;"
-            href="#"><i class="fab fa-linkedin-in"></i></a>
+<div class="container mt-5">
+    <div class="d-flex justify-content-center">
+      <div class="position-relative overflow-hidden mb-4" style="width: 300px; height: 300px; border-radius: 50%;">
+        <img class="img-fluid w-100 h-100" src="{{teacher?.img}}" alt="">
+      </div>
     </div>
-</div>
-<h4>Name: {{teacher?.name}}</h4>
-<div><i>speciality: {{teacher?.speciality}}</i></div>
-<div><i>experience: {{teacher?.experience}}</i></div>
-</div>
+    <div class="text-center">
+      <h4>Name: {{teacher?.firstName}} {{teacher?.lastName}}</h4>
+      <p><strong>Age:</strong> {{teacher?.age}}</p>
+      <p><strong>Address:</strong> {{teacher?.address}}</p>
+      <p><strong>Speciality:</strong> {{teacher?.speciality}}</p>
+      <p><strong>Experience:</strong> {{teacher?.experience}} years</p>
+    </div>
+    <button class="btn btn-secondary mt-3" (click)="goBack()">Back</button>
+
+  </div>
+  
