--- a/src/app/add-parent/add-parent.component.html
+++ b/src/app/add-parent/add-parent.component.html
@@ -1,1 +1,29 @@
-<p>add-parent works!</p>
+<div class="container mt-5">
+    <h3>Add Parent</h3>
+    <form #parentForm="ngForm" (ngSubmit)="addParent()">
+      <div class="form-group">
+        <label for="firstName">First Name</label>
+        <input type="text" [(ngModel)]="parent.firstName" name="firstName" class="form-control" placeholder="First Name" required>
+      </div>
+      <div class="form-group">
+        <label for="lastName">Last Name</label>
+        <input type="text" [(ngModel)]="parent.lastName" name="lastName" class="form-control" placeholder="Last Name" required>
+      </div>
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" [(ngModel)]="parent.email" name="email" class="form-control" placeholder="Email" required>
+      </div>
+      <div class="form-group">
+        <label for="address">Address</label>
+        <input type="text" [(ngModel)]="parent.address" name="address" class="form-control" placeholder="Address" required>
+      </div>
+      <!-- You can add more fields as necessary -->
+      <div class="form-group">
+        <input type="submit" class="btn btn-primary py-3 px-5" value="Add Parent">
+      </div>
+    </form>
+  
+    <!-- Back Button -->
+    <button class="btn btn-secondary mt-3" (click)="goBack()">Back</button>
+  </div>
+  
