--- a/src/app/students-tab/students-tab.component.html
+++ b/src/app/students-tab/students-tab.component.html
@@ -20,6 +20,8 @@
             <td>
               <button class="btn btn-info" (click)="editStudent(student._id)">Edit</button>
               <button class="btn btn-danger" (click)="deleteStudent(student._id)">Delete</button>
+              <button class="btn btn-success" (click)="enroll(student._id)">Enroll in Course</button>
+
             </td>
           </tr>
         </tbody>
