--- a/src/app/course-info/course-info.component.html
+++ b/src/app/course-info/course-info.component.html
@@ -1,19 +1,37 @@
-<div class="position-relative overflow-hidden mb-4" style="margin-left: 40%;margin-top: 7%;">
-    <div  style="border-radius: 100%;width: 50%; height: 50%; "class="d-flex justify-content-center align-items-center">
-        <img class="img-fluid w-100" src={{course?.img}} alt="" >
-        <div
-            class="team-social d-flex align-items-center justify-content-center w-100 h-100 position-absolute">
-            <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px;"
-                href="#"><i class="fab fa-twitter"></i></a>
-            <a class="btn btn-outline-light text-center mr-2 px-0" style="width: 38px; height: 38px;"
-                href="#"><i class="fab fa-facebook-f"></i></a>
-            <a class="btn btn-outline-light text-center px-0" style="width: 38px; height: 38px;"
-                href="#"><i class="fab fa-linkedin-in"></i></a>
-        </div>
-    </div>
-    <h4>Title: {{course?.title}}</h4>
-    <div><i>price: {{course?.price}}</i></div>
-    <div><i>duration: {{course?.duration}}</i></div>
-    <div><i>age Of Kids: {{course?.ageOfKids}}</i></div>
-    <div><i>Total Seats: {{course?.totalSeats}}</i></div>
-    </div>
+<div class="container mt-5">
+    <h3>Course Information</h3>
+    <p><strong>Title:</strong> {{ course?.title }}</p>
+    <p><strong>Description:</strong> {{ course?.description }}</p>
+    <p><strong>Duration:</strong> {{ course?.duration }} hours</p>
+    <p><strong>Price:</strong> ${{ course?.price }}</p>
+  
+    <h4 class="mt-4">Enrolled Students</h4>
+  
+    <table class="table table-bordered" *ngIf="students.length > 0">
+      <thead class="thead-dark">
+        <tr>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Email</th>
+          <th>Grades</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let student of students">
+          <td>{{ student.firstName }}</td>
+          <td>{{ student.lastName }}</td>
+          <td>{{ student.email }}</td>
+          <td>
+            <ul>
+              <li *ngFor="let grade of student.grades">
+                {{ grade.course.title }}: {{ grade.grade }}
+              </li>
+            </ul>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  
+    <p *ngIf="students.length === 0">No students enrolled in this course yet.</p>
+  </div>
+  
