--- a/src/app/course-info/course-info.component.html
+++ b/src/app/course-info/course-info.component.html
@@ -24,7 +24,7 @@
           <td>
             <ul>
               <li *ngFor="let grade of student.grades">
-                {{ grade.course.title }}: {{ grade.grade }}
+                {{ course.title }}: {{ grade.grade }}
               </li>
             </ul>
           </td>
@@ -34,4 +34,3 @@
   
     <p *ngIf="students.length === 0">No students enrolled in this course yet.</p>
   </div>
-  
