--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
                 <li *ngIf="user?.role === 'user'" class="nav-item nav-link"><a routerLink="teachers">Teachers</a></li>
                 <li *ngIf="user?.role === 'user'" class="nav-item nav-link"><a routerLink="courses">Courses</a></li>
 
-                <div *ngIf="isLoggedIn()" class="nav-item dropdown">
+                <div *ngIf="isLoggedIn() && user.role=='admin'" class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Dashboard</a>
                     <div class="dropdown-menu rounded-0 m-0">
                         <a class="dropdown-item" routerLink="add-course">Add Course</a>
