--- a/src/app/dashboard-student/dashboard-student.component.html
+++ b/src/app/dashboard-student/dashboard-student.component.html
@@ -18,6 +18,9 @@
             <p class="card-text">
               <strong>Grade: </strong>{{ item.grade }}
             </p>
+            <p class="card-text">
+              <strong>Evaluation: </strong>{{ item.evaluation }}
+            </p>
           </div>
         </div>
       </div>
