--- a/src/app/teacher-info/teacher-info.component.html
+++ b/src/app/teacher-info/teacher-info.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="d-flex justify-content-center">
       <div class="position-relative overflow-hidden mb-4" style="width: 300px; height: 300px; border-radius: 50%;">
-        <img class="img-fluid w-100 h-100" src="{{teacher?.img}}" alt="">
+        <img class="img-fluid w-100 h-100" src="{{teacher?.path}}" alt="">
       </div>
     </div>
     <div class="text-center">
